--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             height: 100vh;
             margin: 0;
             background-color: #f2f2f2;
+            padding: 10px;
+            box-sizing: border-box;
         }
 
         .container {
@@ -21,31 +23,48 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            width: 300px;
+            width: 100%;
+            max-width: 400px;
+            box-sizing: border-box;
         }
 
         input[type="text"] {
-            width: 80%;
-            padding: 10px;
-            margin: 20px auto;
+            width: 100%;
+            padding: 15px;
+            margin: 20px 0;
             border: 1px solid #ccc;
             border-radius: 4px;
-            display: block;
             text-align: center;
+            font-size: 16px;
+            box-sizing: border-box;
         }
 
         button {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
+            padding: 15px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             width: 100%;
+            font-size: 16px;
+            box-sizing: border-box;
         }
 
         button:hover {
             background-color: #45a049;
+        }
+
+        /* Media query for smaller screens */
+        @media (max-width: 480px) {
+            .container {
+                padding: 15px;
+            }
+
+            input[type="text"], button {
+                padding: 12px;
+                font-size: 14px;
+            }
         }
     </style>
 </head>
