--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         .container {
             background-color: #fff;
-            padding: 20px;
+            padding: 40px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
@@ -29,7 +29,7 @@
         }
 
         .logo {
-            max-width: 150px;
+            width: 100%;
             margin-bottom: 20px;
         }
 
@@ -72,7 +72,7 @@
             }
 
             .logo {
-                max-width: 100px;
+                width: 100%;
             }
         }
     </style>
